Security issues with various API endpoints.

--- a/frontend/src/assets/locales/en/admin.json
+++ b/frontend/src/assets/locales/en/admin.json
@@ -23,6 +23,7 @@
     "active": "Active",
     "inactive": "Inactive"
   },
+  "errorRetrieving": "Error retrieving the record",
   "roleColLabels": {
     "role": "Role",
     "roleOf": "Role conferred to",
